--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,12 @@
 
     <link rel="manifest" href="/manifest.json">
 
+    <script src="https://cdn.ravenjs.com/3.26.4/raven.min.js" crossorigin="anonymous"></script>
+    <script>
+      Raven.config('https://4356720039a74d85b3989b427d483e22@sentry.io/1275255', {
+        release: '1.0.1'
+      }).install()
+    </script>
     <script src="/bower_components/webcomponentsjs/webcomponents-loader.js"></script>
 
     <link rel="import" href="/src/slr-app.html">
