--- a/client/src/slr-product-groups.html
+++ b/client/src/slr-product-groups.html
@@ -143,6 +143,14 @@
         this.addEventListener('product-group-delete', (e) => this.onDelete(e))
         this.addEventListener('product-group-submit', (e) => this.onSubmit(e))
         this.$.productGroupsData.addEventListener('items-data-error', (e) => this.onProductGroupsDataError(e))
+
+        try {
+          console.log('try')
+          foo()
+        } catch (e) {
+          console.log('catch', e)
+          Raven.captureException(e);
+        }
       }
 
       onCancel(e) {
