Update to sentry on premise URL

--- a/client/index.html
+++ b/client/index.html
@@ -10,7 +10,7 @@
 
     <script src="https://cdn.ravenjs.com/3.26.4/raven.min.js" crossorigin="anonymous"></script>
     <script>
-      Raven.config('https://4356720039a74d85b3989b427d483e22@sentry.io/1275255', {
+      Raven.config('https://1699df53f6c6465f9841538d08f79d01@sentry.stups-test.zalan.do/2', {
         release: '1.0.1'
       }).install()
     </script>
